





import java.util.List;
import java.util.ArrayList;

public class fsm_Fsm  {

    private String name;



    public fsm_Fsm(
        String name    ) {
        this.name = name;
    }


    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }


}