





import java.util.List;
import java.util.ArrayList;

public class fsm_State  {

    private String name;



    public fsm_State(
        String name    ) {
        this.name = name;
    }


    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }


}