@startuml
class fsm_FSM {
}
class fsm_State {
  + name : str
}
class fsm_Transition {
  + input : str
  + output : str
}
fsm_State "1..1" -- "0..9999" fsm_Transition : incomingTransition2
fsm_State "1..1" *-- "0..9999" fsm_Transition : outgoingTransition1
fsm_FSM "1..1" *-- "0..9999" fsm_State : ownedState0
fsm_State "1..1" -- "1..1" fsm_Transition : source4
fsm_State "1..1" -- "1..1" fsm_Transition : target5
@enduml